[package]
name = "brain_rust"
version = "0.1.2"
edition = "2021"
authors = ["PROMETHIA"]
description = "A BF transpiler to rust written as a rust declarative macro."
license = "MIT"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]