[package]
name = "brain_rust"
version = "0.1.3"
edition = "2021"
authors = ["PROMETHIA"]
description = "A BF transpiler to rust written as a rust declarative macro."
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/PROMETHIA-27/brain_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]